# lab-datos-TPF

./: .gitignore  README.md  data.dvc  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: test_mae.tsv  test_r2.tsv  test_rmse.tsv
models/: .gitignore  lightgbm_v1.0.0.pkl  lightgbm_v1.0.0.pkl.dvc  model_registry.json  pipeline_v1.0.0.pkl  pipeline_v1.0.0.pkl.dvc  random_forest_v1.0.0.pkl.dvc  ridge_final_v1.0.0.pkl  ridge_v1.0.0.pkl  ridge_v1.0.0.pkl.dvc  xgboost_v1.0.0.pkl  xgboost_v1.0.0.pkl.dvc
notebooks/: dvc.yaml  eda.ipynb  models.ipynb  preprocessing.ipynb  train_model.py
notebooks/dvclive/: metrics.json  params.yaml
notebooks/dvclive/plots/metrics/: train_mae.tsv  train_r2.tsv  train_rmse.tsv
results/: experiment_logs.csv
src/: aux_functions.py  config_paths.py  predict.py  preprocessing_pipeline.py
