[project]
name = "lab-datos-tpf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.64.0",
    "jupyter>=1.1.1",
    "missingno>=0.5.2",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
