[project]
name = "lab-datos-tpf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "appdirs==1.4.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "asyncssh==2.21.1",
    "atpublic==6.0.2",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "billiard==4.2.2",
    "bleach==6.3.0",
    "celery==5.5.3",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "configobj==5.0.9",
    "contourpy==1.3.3",
    "cryptography==43.0.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dictdiffer==0.9.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dpath==2.2.0",
    "dulwich==0.24.10",
    "dvc==3.64.0",
    "dvc-data==3.16.12",
    "dvc-gdrive>=3.0.1",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.2",
    "dvc-render==1.0.2",
    "dvc-studio-client==0.22.0",
    "dvc-task==0.40.2",
    "dvclive>=3.49.0",
    "entrypoints==0.4",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "flatten-dict==0.4.2",
    "flufl-lock==8.2.0",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "funcy==2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "grandalf==0.8",
    "gto==1.9.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hydra-core==1.3.2",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "iterative-telemetry==0.0.10",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "kombu==5.5.4",
    "lark==1.3.1",
    "lightgbm>=4.6.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "missingno==0.5.2",
    "mistune==3.1.4",
    "multidict==6.7.0",
    "narwhals==2.11.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy==2.3.4",
    "omegaconf==2.3.0",
    "openpyxl==3.1.5",
    "optuna>=4.6.0",
    "orjson==3.11.4",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "plotly==6.4.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydot==4.0.1",
    "pygit2==1.19.0",
    "pygments==2.19.2",
    "pygtrie==2.5.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "pytz==2025.2",
    "pywin32==311",
    "pywinpty==3.0.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.2.0",
    "rpds-py==0.28.0",
    "ruamel-yaml==0.18.16",
    "ruamel-yaml-clib==0.2.14",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "scmrepo==3.5.3",
    "seaborn==0.13.2",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqltrie==0.11.2",
    "stack-data==0.6.3",
    "tabulate==0.9.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tomlkit==0.13.3",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "wcwidth==0.2.14",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
    "xgboost>=3.1.1",
    "yarl==1.22.0",
    "zc-lockfile==4.0",
]
